--- a/ClickerGameWPF/MainWindow.xaml
+++ b/ClickerGameWPF/MainWindow.xaml
@@ -1,12 +1,27 @@
-﻿<Window x:Class="ClickerGameWPF.MainWindow"
+﻿<Window x:Name="ClickerGame" x:Class="ClickerGameWPF.Game"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ClickerGameWPF"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
+        Title="ClickerGame" Height="450" Width="800">
+    <Grid Background="Black">
+        <Button Content="Click Me!" HorizontalAlignment="Center" Margin="283,148,287.6,143" VerticalAlignment="Center" Width="223" Height="129" FontSize="45" BorderBrush="Black" FontFamily="Consolas" OpacityMask="Black" Click="Button_Click">
+            <Button.Foreground>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="Black" Offset="0"/>
+                    <GradientStop Color="#7FFF0000" Offset="1"/>
+                </LinearGradientBrush>
+            </Button.Foreground>
+            <Button.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="Black" Offset="0"/>
+                    <GradientStop Color="#FF1711FC" Offset="1"/>
+                </LinearGradientBrush>
+            </Button.Background>
+        </Button>
+        <Label x:Name="ScoreLabel" Content="0" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="283,41,0,0" VerticalAlignment="Top" Height="77" Width="223" Foreground="White" FontSize="55" Background="Black" FontFamily="Consolas"/>
+
     </Grid>
 </Window>
